feat: Clarify comments on external links in documentation
Updated comments for clarity regarding external links.

--- a/docs/release/trg-10/trg-10-02.mdx
+++ b/docs/release/trg-10/trg-10-02.mdx
@@ -128,9 +128,9 @@ docs-kits/kits/
     ├── documentation/
     │   ├── _category_.json
     │   ├── attachments.md                 # Here you can include more files if necessary
-    │   ├── github-repository              # NOT A FILE (OPTIONAL): External Link to GitHub repository
+    │   ├── github-repository              # NOT A FILE (OPTIONAL): External Link to GitHub
     │   ├── api-documentation              # NOT A FILE (OPTIONAL): Link to API documentation
-    │   ├── community-support              # NOT A FILE (OPTIONAL): Link to community support channels
+    │   ├── community-support              # NOT A FILE (OPTIONAL): Link to community channels
     │   └── related-standards              # NOT A FILE (OPTIONAL): Links to related standards
     └── resources/
         └── img/                           # KIT-specific images and diagrams
