Update IC Changelog in accordance to its changes for r25.12

--- a/docs-kits/kits/industry-core-kit/changelog.mdx
+++ b/docs-kits/kits/industry-core-kit/changelog.mdx
@@ -9,6 +9,17 @@ sidebar_position: 0
 
 All notable changes to this KIT will be documented in this file.
 
+## [1.5.0] - 2025-11-07
+
+### Added
+
+- Mass Data handling
+- Cloud-to-Cloud Parquet File Transfer with EDC Cloud Extension
+
+### Changed
+
+- Updates AAS API version from 3.0 to 3.1
+
 ## [1.4.0] - 2025-03-17
 
 Compatible for **release 25.03**.
