--- a/docs/release/trg-10/trg-10-02.mdx
+++ b/docs/release/trg-10/trg-10-02.mdx
@@ -294,4 +294,4 @@ To ensure the quality and consistency of KITs, the following alignment mechanism
 | SIG-Release | Official KIT Release Tracking | [eclipse-tractusx/sig-release](https://github.com/eclipse-tractusx/sig-release) |
 | KIT Discussions | Offical KIT Proposal and Discussion Location | [KIT Discussions](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/discussions/categories/kits) |
 
-In case a change to a existing KIT is planned, it is recommended to use the KIT Discussions or GitHub Issues to discuss the change with the community before starting the implementation. This will help to gather feedback and ensure alignment with other KIT developers.
+In case a change to an existing KIT is planned, it is recommended to use the KIT Discussions or GitHub Issues to discuss the change with the community before starting the implementation. This will help to gather feedback and ensure alignment with other KIT developers.
