feat: updated trg bugs

--- a/docs/release/trg-10/trg-10-02.mdx
+++ b/docs/release/trg-10/trg-10-02.mdx
@@ -37,11 +37,11 @@ For the KIT Content this two TRGs must be followed:
 - Each KIT view (business, development, ..) must include a license notice and adhere to the CY BB 4.0 license - see [TRG 7.08 - Legal notice for KIT documentation (CC-BY-4.0)](/docs/release/trg-7/trg-7-08)
 - Images must be neutral without any branding, and displayed on a. Images need to follow a the legal notice TRG - see [Legal notice for non-code](/docs/release/trg-7/trg-7-07)
 - A KIT must have a defined code owner for each industry extension - see [Industry Extensions](#industry-extensions)
+- A KIT must have defined code owners for kit maintenance - see [KIT Maintainers & Code Owners](#kit-maintainers--code-owners)
 
 ## KIT Logo
 
-- A KIT must have defined code owners for kit maintenance - see [KIT Maintainers & Code Owners](#kit-maintainers--code-owners)
-- A KIT must have a SVG icon as described the [TRG 10.01](trg-10-01.mdx) and be stored in the `/static/img/kits/<kit-id>/<kit-id>-raw.svg` folder and be correctly licenses following the [TRG 7.07](https://eclipse-tractusx.github.io/docs/release/trg-7/trg-7-07).
+- A KIT must have a SVG icon as described the [TRG 10.01](trg-10-01.mdx) and be stored in the `/static/img/kits/<kit-id>/<kit-id>-raw.svg` folder in SVG format **without background, in white color, without claim** and be correctly licenses following the [TRG 7.07](https://eclipse-tractusx.github.io/docs/release/trg-7/trg-7-07).
 - A KIT logo must be included in every file in the following way (under the page title):
 
 ```markdown
