--- a/blog-changelog/2025-12-03-release-25-12.md
+++ b/blog-changelog/2025-12-03-release-25-12.md
@@ -136,13 +136,14 @@ Most of the features are linked to product specific issues. Please have a look o
 
 | Component | Helm Chart (s) | App-/KIT Version (s) | Release Check |
 |:------------|:---------------:|:--------------------:|----------------|
+| [Business Partner KIT](https://eclipse-tractusx.github.io/docs-kits/category/business-partner-kit) | n/a | [11.0.0](https://eclipse-tractusx.github.io/docs-kits/kits/business-partner-kit/changelog#1000---2025-09-08) | [#1551](https://github.com/eclipse-tractusx/sig-release/issues/1551) |
 | [Digital Twin Registry](https://github.com/eclipse-tractusx/sldt-digital-twin-registry) | digital-twin-registry:[0.10.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/digital-twin-registry-0.10.0) | [0.10.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/v0.10.0) | [#1536](https://github.com/eclipse-tractusx/sig-release/issues/1536) |
 | [Golden Record Business Partner Number (BPN) Service](https://github.com/eclipse-tractusx/bpdm) | bpdm: [6.2.0](https://github.com/eclipse-tractusx/bpdm/releases/tag/bpdm-6.2.0) | [7.2.0](https://github.com/eclipse-tractusx/bpdm/releases/tag/v7.2.0) | [#1539](https://github.com/eclipse-tractusx/sig-release/issues/1539) |
 | [Industry Core Hub](https://github.com/eclipse-tractusx/industry-core-hub) | industry-core-hub:[0.X.0](https://github.com/eclipse-tractusx/industry-core-hub/releases/tag/industry-core-hub-0.X.0) | [v0.X.0](https://github.com/eclipse-tractusx/industry-core-hub/releases/tag/v0.X.0) | [#1532](https://github.com/eclipse-tractusx/sig-release/issues/1532) |
-| [Portal](https://github.com/eclipse-tractusx/portal) | portal: [2.X.0](https://github.com/eclipse-tractusx/portal/releases/tag/portal-2.X.0) | registration: [2.X.X](https://github.com/eclipse-tractusx/portal-frontend-registration/releases/tag/v2.X.X)<br/>frontend: [2.X.0](https://github.com/eclipse-tractusx/portal-frontend/releases/tag/v2.X.0)<br/>backend: [2.X.0](https://github.com/eclipse-tractusx/portal-backend/releases/tag/v2.X.0)<br/>assets: [2.X.0](https://github.com/eclipse-tractusx/portal-assets/releases/tag/v2.X.0) | [#1541](https://github.com/eclipse-tractusx/sig-release/issues/1541) |
-| [PURIS](https://github.com/eclipse-tractusx/puris) | puris: [5.0.0](https://github.com/eclipse-tractusx/puris/releases/tag/puris-5.0.0) | [6.0.0](https://github.com/eclipse-tractusx/puris/releases/tag/6.x0.0) | [#1538](https://github.com/eclipse-tractusx/sig-release/issues/1538) |
+| [Industry Core KIT](https://eclipse-tractusx.github.io/docs-kits/next/category/industry-core-kit) | n/a | [1.5.0](https://eclipse-tractusx.github.io/docs-kits/next/kits/industry-core-kit/changelog#140---2025-03-17) | n/a |
+| [PURIS](https://github.com/eclipse-tractusx/puris) | puris: [5.1.1](https://github.com/eclipse-tractusx/puris/releases/tag/puris-5.1.1) | [4.1.1](https://github.com/eclipse-tractusx/puris/releases/tag/4.1.1) | [#1538](https://github.com/eclipse-tractusx/sig-release/issues/1538) |
 | [Self Description (SD) Factory](https://github.com/eclipse-tractusx/sd-factory) | sdfactory: [2.1.35](https://github.com/eclipse-tractusx/sd-factory/releases/tag/sdfactory-2.1.35) | [2.1.26](https://github.com/eclipse-tractusx/sd-factory/releases/tag/v2.1.26) | [#1537](https://github.com/eclipse-tractusx/sig-release/issues/1537) |
-| [Tractus-X Software Development KIT (SDK)](https://github.com/eclipse-tractusx/tractusx-sdk) |  n/a | [v0.X.0](https://github.com/eclipse-tractusx/tractusx-sdk/releases/tag/v0.x.0) | [#1533](https://github.com/eclipse-tractusx/sig-release/issues/1533) |
+| [Tractus-X Software Development KIT (SDK)](https://github.com/eclipse-tractusx/tractusx-sdk) |  n/a | [v0.6.1](https://github.com/eclipse-tractusx/tractusx-sdk/releases/tag/v0.6.1) | [#1533](https://github.com/eclipse-tractusx/sig-release/issues/1533) |
 
 #### Deleted
 
@@ -155,6 +156,15 @@ Most of the features are linked to product specific issues. Please have a look o
   - These products were not part of the testing phase
 - The Eclipse Tractus-X release does not include an Identity Wallet. The development team decided on a temporary bridging solution, based on a commercial application, to test and ship the releases 24.08, 24.12, 25.03, 25.06, 25.09 and 25.12. Without implementing this interim solution, participants will not be able to fully utilize this release in consequence.
 - For E2E Testing, the [2.2.3](https://github.com/SAP/ssi-dim-middle-layer/releases/tag/v2.2.3) of the [SSI DIM Middle Layer](https://github.com/SAP/ssi-dim-middle-layer) was used - this component is FOSS but the currently used wallet (see previous item) is not
+
+#### Industry Core Hub
+
+- Complete EcoPass functionality completely included on this release (only creation of passports in a Catalog Part)
+  - It will be released on a beta tag from the PR: https://github.com/eclipse-tractusx/industry-core-hub/pull/391
+
+#### Tractus-X SDK
+
+- Compatibility with EDC 0.11.x (Saturn) not tested completely: https://github.com/eclipse-tractusx/tractusx-sdk/issues/159
 
 ### Runtime
 
