feat: fixed spelling mistakes

--- a/blog/2025-11-22-kit-2.0-architecture.mdx
+++ b/blog/2025-11-22-kit-2.0-architecture.mdx
@@ -73,9 +73,9 @@ The KIT framework has evolved significantly from version 1.0 to 2.0 to support t
 
 <KitVersionComparison />
 
-### Interactive Hexagonal Design
+### Multi Industry Architecture
 
-The new architecture features a beautiful hexagonal layout that visually represents the four main layers of our KIT ecosystem:
+The new architecture features a beautiful hexagonal layout that visually represents the four main layers of our KIT ecosystem, allowing now KITs to be industry specific:
 
 :::tip 
 Click in the architecture components to see a personalized views! Or continue scrolling if you want to know more!
@@ -87,7 +87,7 @@ Click in the architecture components to see a personalized views! Or continue sc
 
 ### Modular Reusable Architecture
 
-Here is a detailed explana of the diagram above, and how this architecture improves reusability:
+Here is a detailed explanation of the diagram above, and how this architecture improves reusability:
 
 <KitArchitectureDiagram />
 
