feat: added a new disclaimer

--- a/blog/2025-11-22-kit-2.0-architecture.mdx
+++ b/blog/2025-11-22-kit-2.0-architecture.mdx
@@ -73,7 +73,7 @@ The KIT framework has evolved significantly from version 1.0 to 2.0 to support t
 
 <KitVersionComparison />
 
-### Multi Industry Architecture
+### Multi-Industry Architecture
 
 The new architecture features a beautiful hexagonal layout that visually represents the four main layers of our KIT ecosystem, allowing now KITs to be industry specific:
 
@@ -84,6 +84,10 @@ Click in the architecture components to see a personalized views! Or continue sc
 <div style={{ maxWidth: '800px', margin: '0 auto' }}>
   <KitsArchitecture industries={industries} />
 </div>
+
+:::warning Support Us!
+Support us on finding a final clasification for each KIT! An initial destribution was done based on the context and requirements from each KIT. In case there is a bug or mistake, feel free to open an issue and inform it at our [official office hours](https://eclipse-tractusx.github.io/community/open-meetings#Eclipse%20Tractus-X%20KITs%20Community%20Office%20Hour). Currently the content of the KITs (the structure) is still not refactored, but it is planned already [eclipse-tractusx/sig-release#1567](https://github.com/eclipse-tractusx/sig-release/issues/1567), support and contributions are always welcomed!
+:::
 
 ### Modular Reusable Architecture
 
