Add comment for new KIT structure.

--- a/blog-changelog/2025-12-03-release-25-12.md
+++ b/blog-changelog/2025-12-03-release-25-12.md
@@ -122,8 +122,14 @@ Most of the features are linked to product specific issues. Please have a look o
 
 #### Added
 
-| Component | Helm Chart (s) | App-/KIT Version (s) | Release Check |
-|:------------|:---------------:|:--------------------:|----------------|
+:::info
+
+We are excited to announce the launch of KIT 2.0 Architecture - a major redesign of how we visualize and organize our KIT ecosystem. This update brings a fresh perspective to understanding the layered architecture of Eclipse Tractus-X, making it easier than ever to explore and navigate our comprehensive collection of KITs.
+
+For further information, please refer to the [following link](https://eclipse-tractusx.github.io/blog/kit-2.0-architecture).
+If you are interested in what has changed on our website, please visit [this changelog](https://github.com/eclipse-tractusx/eclipse-tractusx.github.io/blob/main/CHANGELOG.md#r2512---2025-11-20).
+
+:::
 
 #### Updated
 
