update changelog by adding kits

--- a/blog-changelog/2025-12-03-release-25-12.md
+++ b/blog-changelog/2025-12-03-release-25-12.md
@@ -131,6 +131,10 @@ If you are interested in what has changed on our website, please visit [this cha
 
 :::
 
+| Component | Helm Chart (s) | App-/KIT Version (s) | Release Check |
+|:------------|:---------------:|:--------------------:|:----------------:|
+| [Geometry KIT](https://eclipse-tractusx.github.io/docs-kits/next/category/geometry-kit) | n/a  | [1.0.0](https://eclipse-tractusx.github.io/docs-kits/next/kits/geometry-kit/changelog-geometry-kit#100---2025-12-03) | n/a |
+
 #### Updated
 
 :::note
@@ -141,11 +145,12 @@ If you are interested in what has changed on our website, please visit [this cha
 :::
 
 | Component | Helm Chart (s) | App-/KIT Version (s) | Release Check |
-|:------------|:---------------:|:--------------------:|----------------|
+|:------------|:---------------:|:--------------------:|:----------------:|
 | [Business Partner KIT](https://eclipse-tractusx.github.io/docs-kits/category/business-partner-kit) | n/a | [11.0.0](https://eclipse-tractusx.github.io/docs-kits/kits/business-partner-kit/changelog#1000---2025-09-08) | [#1551](https://github.com/eclipse-tractusx/sig-release/issues/1551) |
+| [Data Driven Quality Management KIT](https://eclipse-tractusx.github.io/docs-kits/category/data-driven-quality-management-kit)| n/a | [2.1.0](https://eclipse-tractusx.github.io/docs-kits/next/kits/data-driven-quality-management-kit/changelog#210---release-2512) | n/a | 
 | [Digital Twin Registry](https://github.com/eclipse-tractusx/sldt-digital-twin-registry) | digital-twin-registry:[0.10.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/digital-twin-registry-0.10.0) | [0.10.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/v0.10.0) | [#1536](https://github.com/eclipse-tractusx/sig-release/issues/1536) |
 | [Golden Record Business Partner Number (BPN) Service](https://github.com/eclipse-tractusx/bpdm) | bpdm: [6.2.0](https://github.com/eclipse-tractusx/bpdm/releases/tag/bpdm-6.2.0) | [7.2.0](https://github.com/eclipse-tractusx/bpdm/releases/tag/v7.2.0) | [#1539](https://github.com/eclipse-tractusx/sig-release/issues/1539) |
-| [Industry Core Hub](https://github.com/eclipse-tractusx/industry-core-hub) | industry-core-hub:[0.X.0](https://github.com/eclipse-tractusx/industry-core-hub/releases/tag/industry-core-hub-0.X.0) | [v0.X.0](https://github.com/eclipse-tractusx/industry-core-hub/releases/tag/v0.X.0) | [#1532](https://github.com/eclipse-tractusx/sig-release/issues/1532) |
+| [Industry Core Hub](https://github.com/eclipse-tractusx/industry-core-hub) | industry-core-hub:[0.X.0](https://github.com/eclipse-tractusx/industry-core-hub/releases/tag/industry-core-hub-0.X.0) | [v0.3.0](https://github.com/eclipse-tractusx/industry-core-hub/releases/tag/v0.3.0) | [#1532](https://github.com/eclipse-tractusx/sig-release/issues/1532) |
 | [Industry Core KIT](https://eclipse-tractusx.github.io/docs-kits/next/category/industry-core-kit) | n/a | [1.5.0](https://eclipse-tractusx.github.io/docs-kits/next/kits/industry-core-kit/changelog#140---2025-03-17) | n/a |
 | [PURIS](https://github.com/eclipse-tractusx/puris) | puris: [5.1.1](https://github.com/eclipse-tractusx/puris/releases/tag/puris-5.1.1) | [4.1.1](https://github.com/eclipse-tractusx/puris/releases/tag/4.1.1) | [#1538](https://github.com/eclipse-tractusx/sig-release/issues/1538) |
 | [Self Description (SD) Factory](https://github.com/eclipse-tractusx/sd-factory) | sdfactory: [2.1.35](https://github.com/eclipse-tractusx/sd-factory/releases/tag/sdfactory-2.1.35) | [2.1.26](https://github.com/eclipse-tractusx/sd-factory/releases/tag/v2.1.26) | [#1537](https://github.com/eclipse-tractusx/sig-release/issues/1537) |
