Add known knowns to PURIS

--- a/blog-changelog/2025-12-03-release-25-12.md
+++ b/blog-changelog/2025-12-03-release-25-12.md
@@ -169,6 +169,11 @@ If you are interested in what has changed on our website, please visit [this cha
   - It will be released on a beta tag from [the PR](https://github.com/eclipse-tractusx/industry-core-hub/pull/391)
 - One defect was found at the E2E test phase, when creating a serialized part, the "partInstanceId" field is obligatory, but if you leave it empty, it will create the part with it empty (which is not a blocker, just you will not be able to search by partInstanceId, since it is not specified): [for more infomration](https://catena-x.atlassian.net/browse/CXTPM-888)
 
+#### PURIS
+
+- PURIS FOSS has not been integrated with Tractus-X Connector 0.11.x and new Policy Profile (CX25.09)
+- Rest see, [Changelog, Known Knows](https://github.com/eclipse-tractusx/puris/releases/tag/4.1.1)
+
 #### Tractus-X SDK
 
 - Compatibility with EDC 0.11.x (Saturn) not tested completely [see here](https://github.com/eclipse-tractusx/tractusx-sdk/issues/159)
