--- a/blog-changelog/2025-12-03-release-25-12.md
+++ b/blog-changelog/2025-12-03-release-25-12.md
@@ -158,7 +158,7 @@ If you are interested in what has changed on our website, please visit [this cha
 
 ### Known Knowns
 
-- All not listed products and KITs have not been updated and are based on the release 25.09
+- All not listed products and KITs have not been updated and are based on the release 25.09 or previous releases
   - These products were not part of the testing phase
 - The Eclipse Tractus-X release does not include an Identity Wallet. The development team decided on a temporary bridging solution, based on a commercial application, to test and ship the releases 24.08, 24.12, 25.03, 25.06, 25.09 and 25.12. Without implementing this interim solution, participants will not be able to fully utilize this release in consequence.
 - For E2E Testing, the [2.2.3](https://github.com/SAP/ssi-dim-middle-layer/releases/tag/v2.2.3) of the [SSI DIM Middle Layer](https://github.com/SAP/ssi-dim-middle-layer) was used - this component is FOSS but the currently used wallet (see previous item) is not
@@ -182,10 +182,9 @@ If you are interested in what has changed on our website, please visit [this cha
 
 The following runtime has been used during end-to-end test:
 
-- [Kubernetes](https://en.wikipedia.org/wiki/Kubernetes) version: `1.29.10`
+- [Kubernetes](https://en.wikipedia.org/wiki/Kubernetes) version: `1.33.1`
 - Applications used
-  - [PostgreSQL](https://en.wikipedia.org/wiki/PostgreSQL) version: `15.4.0` or more specifically `15.4.0-debian-11-r45`
-  - Tractus-X Connector version [0.11.0](https://github.com/eclipse-tractusx/tractusx-edc/releases/tag/0.11.0)
+  - [PostgreSQL](https://en.wikipedia.org/wiki/PostgreSQL) version: `15.4.0` or higher
   - DTR version [0.10.0](https://github.com/eclipse-tractusx/sldt-digital-twin-registry/releases/tag/v0.10.0)
 
 :::note
