feat: added that the eclipse foudation contributiors need to be included in KITs.

--- a/docs/release/trg-7/trg-7-07.md
+++ b/docs/release/trg-7/trg-7-07.md
@@ -70,6 +70,7 @@ This work is licensed under the [CC-BY-4.0](https://creativecommons.org/licenses
 
 - SPDX-License-Identifier: CC-BY-4.0
 - SPDX-FileCopyrightText: 202x {Owner}
+- SPDX-FileCopyrightText: 202x Contributors to the Eclipse Foundation
 - Source URL: https://github.com/eclipse-tractusx/<myrepo>/<link_to_doc_or_doc_dir> (+)
 ```
 
@@ -86,6 +87,8 @@ Explanations in brackets, do not copy. PLEASE.
 ```
 
 :::
+
+The copyright for the Eclipse Foundation Contributors `202x Contributors to the Eclipse Foundation` (with the respective year(s)) **MUST** be included in all markdown NOTICE copyright. For more information consult [Eclipse Foundation Rulebook - Legal Documentation](https://www.eclipse.org/projects/handbook/#legaldoc)
 
 ### Self-created content
 
