feat: updated changelogs from the TRGs

--- a/docs/release/trg-10/trg-10-02.mdx
+++ b/docs/release/trg-10/trg-10-02.mdx
@@ -11,6 +11,7 @@ import MenuBookIcon from '@mui/icons-material/MenuBook';
 |------------|--------------|----------------------------------------|
 | Draft      | 12-Apr-2024  | Initial contribution                   |
 | Active     | 20-Nov-2025  | Splitted 09.01 Draft into 10.01, 10.02, 10.03 adding the new KIT 2.0 Content Structure |
+| Active     | 11-Dec-2025  | Added copyright notice eclipse foudation contributors enforcement |
 
 ## Why
 
