--- a/docs/release/trg-7/trg-7-06.md
+++ b/docs/release/trg-7/trg-7-06.md
@@ -7,7 +7,8 @@ title: TRG 7.06 - Legal notice for end user content
 | Active | 27-Jun-2025 | Remove documentation section               |
 | Active | 25-Apr-2024 | Updates for CC-BY-4.0 license              |
 | Active | 04-Dec-2023 | Update Shared UI Components / NPM library  |
-| Active | 13-Apr-2023 | New                                        |
+| Active | 13-Apr-2023 | New REUSE.toml                             |
+| Active | 11-Dec-2025 | Added copyright notice eclipse foudation contributors enforcement |
 
 ## Why
 
