--- a/docs/release/trg-7/trg-7-07.md
+++ b/docs/release/trg-7/trg-7-07.md
@@ -4,7 +4,8 @@ title: TRG 7.07 - Legal notice for non-code (e.g. KITS, documentation, images, s
 
 | Status | Created     | Post-History                  |
 |--------|-------------|-------------------------------|
-| Active | 27-06-2025  | Integration of non-code rules |
+| Active | 11-Dec-2025 | Added copyright notice eclipse foudation contributors enforcement |
+| Active | 27-Jun-2025 | Integration of non-code rules |
 | Active | 25-Apr-2024 | Updates for CC-BY-4.0 license |
 | Active | 18-Jul-2023 | Update: improved description  |
 |        | 13-Apr-2023 | Initial version               |
@@ -85,7 +86,6 @@ Explanations in brackets, do not copy. PLEASE.
 - SPDX-FileCopyrightText: 2021 Owner2 (-> Owner2 created the content in 2021)
 - SPDX-FileCopyrightText: 2021 Contributors to the Eclipse Foundation
 ```
-
 :::
 
 The copyright for the Eclipse Foundation Contributors `202x Contributors to the Eclipse Foundation` (with the respective year(s)) **MUST** be included in all markdown NOTICE copyright. For more information consult [Eclipse Foundation Rulebook - Legal Documentation](https://www.eclipse.org/projects/handbook/#legaldoc)
