feat: added must for documentation notice.

--- a/docs/release/trg-7/trg-7-07.md
+++ b/docs/release/trg-7/trg-7-07.md
@@ -62,7 +62,7 @@ For text files, like files in the markdown format, the attribution is done direc
 section. The attribution is shown with an example for a CC-BY-4.0 licensed markdown file. For other formats like
 slides, pdf, and others adapt the information in an adequate way.
 
-Add a `NOTICE` section (post or preamble) into your dedicated documentation file, with the following information:
+Add a `NOTICE` section (post or preamble) into your dedicated documentation file, with the following information **MUST** be included:
 
 ```text
 ## NOTICE
