Improve formulation in TRG 1-03 concerning overall release notes
Signed-off-by: Lars Geyer-Blaumeiser <lars.blaumeiser@cofinity-x.com>

--- a/docs/release/trg-1/trg-1-03.md
+++ b/docs/release/trg-1/trg-1-03.md
@@ -23,7 +23,7 @@ All notable changes of a new release in the product repositories **MUST** be doc
 - Alternative: Document all releases with their changes in a `CHANGELOG.md` file at the root level in the repository.
   A `CHANGELOG.md` file **SHOULD** follow the format as described in [Keep A Changelog](https://keepachangelog.com/en/1.1.0/).
 
-Also, a link to the [Eclipse Tractus-X Changelog](https://github.com/eclipse-tractusx/tractus-x-release/blob/main/CHANGELOG.md) **MUST** be added there.
+In addition, a link to the change documentation **MUST** be added to the [Eclipse Tractus-X Changelog](https://github.com/eclipse-tractusx/tractus-x-release/blob/main/CHANGELOG.md).
 
 The versioning of the product releases **MUST** follow [semantic versioning](https://semver.org/).
 
