Apply suggestions from code review
Co-authored-by: Stephan Bauer <stephan.bauer@catena-x.net>

--- a/docs/release/trg-1/trg-1-03.md
+++ b/docs/release/trg-1/trg-1-03.md
@@ -4,7 +4,7 @@ title: TRG 1.03 - CHANGELOG.md
 
 | Status | Created      | Post-History                             |
 |--------|--------------|------------------------------------------|
-| Update | 22-Dec-2025. | add best practice GitHub release         |
+| Update | 22-Dec-2025  | add best practice GitHub release         |
 | Update | 11-Jan-2024  | add best practices and example changelog |
 | Active | 20-Feb-2023  | reference keep a changelog as format     |
 | Draft  | 14-Sept-2022 | n/a                                      |
@@ -61,7 +61,7 @@ The versioning of the product releases **MUST** follow [semantic versioning](htt
 * Any other PR that qualifies as new functionality provided
 
 ### Documentation
-* docs: non-finite-provider-push in management api walkthrough by by `a contributor` in `link to pr`
+* docs: non-finite-provider-push in management api walkthrough by `a contributor` in `link to pr`
 * Any other PR that qualifies as an improvement of documentation
 
 ### Other Changes
