Enhance documentation on release change logging
Added guidance on using GitHub release notes for documenting changes.

--- a/docs/release/trg-1/trg-1-03.md
+++ b/docs/release/trg-1/trg-1-03.md
@@ -20,6 +20,8 @@ This helps people who are using the product, to understand which version to choo
 All notable changes of a new release in the product repositories **MUST** be documented. There are two ways to document:
 
 - Recommended: Use the GitHub release notes mechanism to document changes in the Release item in GitHub.
+  Be aware, that this mechanism uses the title lines of PRs merged in the release period, so this requires some discipline in this regard.
+  It is possible, to adapt the generated text to get rid of PR issues and to generally improve user experience.
 - Alternative: Document all releases with their changes in a `CHANGELOG.md` file at the root level in the repository.
   A `CHANGELOG.md` file **SHOULD** follow the format as described in [Keep A Changelog](https://keepachangelog.com/en/1.1.0/).
 
