feat: updated kit logos style

--- a/documentation/kit-3d-logo-library.mdx
+++ b/documentation/kit-3d-logo-library.mdx
@@ -1,5 +1,6 @@
 ---
 title: KIT 3D Logo Library
+hide_table_of_contents: true
 ---
 
 {/********************************************************************************* 
