feat: fixed copilot changes

--- a/documentation/kit-lifecycle.mdx
+++ b/documentation/kit-lifecycle.mdx
@@ -306,7 +306,7 @@ Sandbox is the entry point for new KIT ideas (Minimal Viable Product). At this s
       color: 'var(--ifm-color-emphasis-700)',
       fontStyle: 'italic'
     }}>
-      Why do we do this use case? / What is the scope? / What are the business context? / Which data I need?
+      Why do we do this use case? / What is the scope? / What is the business context? / Which data I need?
     </p>
     <div style={{ display: 'flex', flexDirection: 'column', gap: '10px' }}>
       <div style={{
